--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <!-- Required meta tags always come first -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <!-- Required meta tags always come first -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster,Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>NuCamp: A Better Way To Camp</title>
+  <!-- Additional CSS must be placed after Bootstrap CSS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster,Open+Sans" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <title>NuCamp: A Better Way To Camp</title>
 </head>
+
 <body>
   <header class="jumbotron jumbotron-fluid">
     <div class="container">
@@ -42,7 +43,8 @@
       </div>
       <div class="col">
         <h3>React Lake Campground</h3>
-        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is
+        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of
+          the pristine React Lake is
           a favorite for fly fishers.</p>
       </div>
     </div>
@@ -53,34 +55,35 @@
       </div>
       <div class="col">
         <h3>Bootstrap Outfitters</h3>
-        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.
+        </p>
       </div>
     </div>
   </div>
   <footer>
     <div class="container">
-        <div class="row">             
-            <div class="col-4 col-sm-2 offset-1">
-                <h5>Links</h5>
-            <ul class="list-unstyled">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="aboutus.html">About</a></li>
-                    <li><a href="#">Sites</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-sm-5 text-center">
-              <h5>Social</h5>
-                <a href="http://instagram.com/">Instagram</a>
-                <a href="http://facebook.com/">Facebook</a>
-                <a href="http://twitter.com/">Twitter</a>
-                <a href="http://youtube.com/">YouTube</a>
-            </div>
-            <div class="col-sm-4 text-center">
-                Tel: 1-206-555-1234<br />
-                Email: campsites@nucamp.co
-            </div>                
-       </div>
+      <div class="row">
+        <div class="col-4 col-sm-2 offset-1">
+          <h5>Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About</a></li>
+            <li><a href="#">Sites</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-sm-5 text-center">
+          <h5>Social</h5>
+          <a href="http://instagram.com/">Instagram</a>
+          <a href="http://facebook.com/">Facebook</a>
+          <a href="http://twitter.com/">Twitter</a>
+          <a href="http://youtube.com/">YouTube</a>
+        </div>
+        <div class="col-sm-4 text-center">
+          Tel: 1-206-555-1234<br />
+          Email: campsites@nucamp.co
+        </div>
+      </div>
     </div>
   </footer>
   <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
