--- a/aboutus.html
+++ b/aboutus.html
@@ -28,40 +28,17 @@
             </div>
         </div>
     </header>
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-        <div class="container">
-        <button
-          class="navbar-toggler ml-auto"
-          type="button"
-          data-toggle="collapse"
-          data-target="#nucampNavbar"
-        >
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="nucampNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        </ul>
-      </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">About</li>
-                </ol>
                 <h2>About Us</h2>
                 <hr />
             </div>
         </div>
 
         <div class="row row-content">
-            <div class="col col-sm-6 col-lg-6">
+            <div class="col-12 col-sm-6">
                 <h3>Our Mission</h3>
                 <p>We present a curated database of the best campsites in the vast woods and backcountry of the World
                     Wide Web Wilderness. We increase access to adventure for the public while promoting safe and
