--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="contactus.html"
                 ><i class="fa fa-address-card fa-lg"></i> Contact</a
               >
             </li>
