--- a/aboutus.html
+++ b/aboutus.html
@@ -12,8 +12,14 @@
     />
 
     <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans"
@@ -46,10 +52,26 @@
         </button>
         <div class="collapse navbar-collapse" id="nucampNavbar">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
-            <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-            <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"
+                ><i class="fa fa-home fa-lg"></i> Home</a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                ><i class="fa fa-info fa-lg"></i> About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><i class="fa fa-list fa-lg"></i> Sites</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html"
+                ><i class="fa fa-address-card fa-lg"></i> Contact</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -68,7 +90,7 @@
       </div>
 
       <div class="row row-content">
-        <div class="col-12 col-sm-6">
+        <div class="col-sm-6">
           <h3>Our Mission</h3>
           <p>
             We present a curated database of the best campsites in the vast
@@ -79,6 +101,39 @@
             to our standards. We also present a platform for campers to share
             reviews on campsites they have visited with each other.
           </p>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+            <div class="card-body">
+              <dl class="row">
+                <dt class="col-6">Founded</dt>
+                <dd class="col-6">February 3, 2016</dd>
+                <dt class="col-6">No. of Campsites in 2019</dt>
+                <dd class="col-6">563</dd>
+                <dt class="col-6">No. of Reviews in 2019</dt>
+                <dd class="col-6">4388</dd>
+                <dt class="col-6">Employees</dt>
+                <dd class="col-6">42</dd>
+              </dl>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card bg-light mt-3">
+            <blockquote class="blockquote card-body">
+              <p class="mb-0">
+                I will not follow where the path may lead, but I will go where
+                there is no path, and I will leave a trail.
+              </p>
+              <footer class="blockquote-footer">
+                Muriel Strode,
+                <cite title="Source Title"
+                  >"Wind-Wafted Wild Flowers" - The Open Court, 1903
+                </cite>
+              </footer>
+            </blockquote>
+          </div>
         </div>
       </div>
 
@@ -111,6 +166,43 @@
           </p>
         </div>
       </div>
+      <div class="row row-content">
+        <div class="col-sm-9">
+          <h2>Facts &amp; Figures</h2>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead>
+                <tr class="bg-primary text-light">
+                  <th></th>
+                  <th>2016</th>
+                  <th>2017</th>
+                  <th>2018</th>
+                </tr>
+              </thead>
+              <tbody class="table-primary">
+                <tr>
+                  <th>Staff Wilderness Experts</th>
+                  <td>10</td>
+                  <td>20</td>
+                  <td>40</td>
+                </tr>
+                <tr>
+                  <th>New Campers</th>
+                  <td>256</td>
+                  <td>1,280</td>
+                  <td>5,360</td>
+                </tr>
+                <tr>
+                  <th>Square Miles Covered</th>
+                  <td>101,325</td>
+                  <td>423,000</td>
+                  <td>~3,000,000,000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer>
@@ -127,14 +219,35 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+            <a
+              class="btn btn-social-icon btn-instagram"
+              href="http://instagram.com/"
+              ><i class="fa fa-instagram"></i
+            ></a>
+            <a
+              class="btn btn-social-icon btn-facebook"
+              href="http://facebook.com/"
+              ><i class="fa fa-facebook"></i
+            ></a>
+            <a
+              class="btn btn-social-icon btn-twitter"
+              href="http://twitter.com/"
+              ><i class="fa fa-twitter"></i
+            ></a>
+            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"
+              ><i class="fa fa-youtube"></i
+            ></a>
           </div>
           <div class="col-sm-4 text-center">
-            <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-            <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+            <a role="button" class="btn btn-link" href="tel:+12065551234"
+              ><i class="fa fa-phone"></i> 1-206-555-1234</a
+            ><br />
+            <a
+              role="button"
+              class="btn btn-link"
+              href="mailto:campsites@nucamp.co"
+              ><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a
+            >
           </div>
         </div>
       </div>
