--- a/aboutus.html
+++ b/aboutus.html
@@ -33,6 +33,11 @@
     <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <a href="index.html"
+              ><img src="img/logo.png" class="img-fluid" alt="logo"
+            /></a>
+          </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
@@ -42,8 +47,11 @@
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
+        <a class="navbar-brand" href="index.html"
+          ><img src="img/logo.png" height="30" width="30" alt="logo"
+        /></a>
         <button
-          class="navbar-toggler ml-auto"
+          class="navbar-toggler"
           type="button"
           data-toggle="collapse"
           data-target="#nucampNavbar"
