--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 mt-4">
-            <a class="btn btn-primary" href="#reserveForm">Reserve Campsite</a>
+          <div class="col col-md-4 col-xl-2 mt-4">
+            <a class="btn btn-info btn-lg" href="#reserveForm"
+              >Reserve Campsite</a
+            >
           </div>
         </div>
       </div>
