--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col col-md-4 col-xl-2 mt-4">
-            <a class="btn btn-info btn-lg" href="#reserveForm"
+            <a
+              href="#reserveForm"
+              role="button"
+              class="btn btn-lg btn-info"
+              data-toggle="tooltip"
+              data-placement="bottom"
+              data-html="true"
+              title="Or call us at <br /><strong>1-206-555-1234</strong>"
               >Reserve Campsite</a
             >
           </div>
@@ -258,5 +265,10 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
   </body>
 </html>
