--- a/contactus.html
+++ b/contactus.html
@@ -87,17 +87,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col">
-          <ol class="breadcrumb">
+        <div class="col mb-2">
+          <ol class="breadcrumb mb-5">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item active">Contact</li>
           </ol>
           <h2>Contact Us</h2>
-          <hr />
         </div>
       </div>
 
-      <div class="row row-content align-items-center">
+      <div class="row row-content align-items-center bg-light text-dark">
         <div class="col-sm-4">
           <h5>Our Address</h5>
           <address>
@@ -121,12 +120,11 @@
         </div>
       </div>
 
-      <div class="row row-content">
-        <div class="col-12">
+      <div class="row row-content px-auto">
+        <div class="col-12 mb-2">
           <h2>Send us your Feedback</h2>
-          <hr />
         </div>
-        <div class="col-md-10">
+        <div class="col-md-10 bg-light text-dark">
           <form>
             <div class="form-group row">
               <label for="firstName" class="col-md-2 col-form-label"
