--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </header>
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top data-pause">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img src="img/logo.png" height="30" width="30" alt="logo"
@@ -236,14 +236,14 @@
         </div>
       </div>
 
-      <div class="row row-content align-items-center">
+      <div class="row row-content align-items-center bg-light text-dark">
         <div class="col-sm-4 order-sm-last col-md-3">
           <h2 class="text-sm-right">Discover & Review</h2>
         </div>
         <div class="col">
           <div class="media">
             <img
-              class="d-flex mr-3 img-thumbnail"
+              class="d-flex mr-3 img-thumbnail all-border"
               src="img/breadcrumb-trail-thumb.jpg"
               alt="Breadcrumb Trail"
             />
@@ -273,7 +273,7 @@
               </p>
             </div>
             <img
-              class="d-flex ml-3 img-thumbnail"
+              class="d-flex ml-3 img-thumbnail all-border"
               src="img/react-lake-thumb.jpg"
               alt="Breadcrumb Lake"
             />
@@ -281,14 +281,14 @@
         </div>
       </div>
 
-      <div class="row row-content">
+      <div class="row row-content bg-light text-dark">
         <div class="col-sm-4 order-sm-last col-md-3">
           <h2>Our Community Partners</h2>
         </div>
         <div class="col">
           <div class="media">
             <img
-              class="d-flex mr-3 img-thumbnail"
+              class="d-flex mr-3 img-thumbnail all-border"
               src="img/bootstrap-thumb.png"
               alt="Bootstrap Outfitters"
             />
@@ -304,7 +304,7 @@
       </div>
       <div class="row row-content">
         <div class="col-sm-6 mx-auto">
-          <div class="card">
+          <div class="card all-border">
             <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
             <div class="card-body">
               <form id="reserveForm">
