--- a/aboutus.html
+++ b/aboutus.html
@@ -88,17 +88,16 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <ol class="breadcrumb">
+          <ol class="breadcrumb mb-5">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item active">About</li>
           </ol>
           <h2>About Us</h2>
-          <hr />
         </div>
       </div>
 
       <div class="row row-content">
-        <div class="col-sm-6">
+        <div class="col-sm-6 bg-light text-dark mb-5">
           <h3>Our Mission</h3>
           <p>
             We present a curated database of the best campsites in the vast
@@ -111,7 +110,7 @@
           </p>
         </div>
         <div class="col-sm-6">
-          <div class="card">
+          <div class="card all-border">
             <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
             <div class="card-body">
               <dl class="row">
@@ -145,95 +144,75 @@
         </div>
       </div>
 
-      <div class="row row-content">
+      <div class="row row-content bg-light text-dark">
         <div class="col-12">
           <h3>Community Partners</h3>
-          <div id="accordion">
-            <div class="card">
-              <div role="tab" class="card-header">
-                <h4>
-                  <a
-                    class="collapsed"
-                    data-toggle="collapse"
-                    data-target="#bootstrap"
-                  >
-                    Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
-                  </a>
-                </h4>
-                <div class="collapse" id="bootstrap" data-parent="#accordion">
-                  <div class="card-body">
-                    <p class="d-none d-sm-block">
-                      Bootstrap Outfitters supplies you with the gear you need
-                      at prices you can't beat.
-                    </p>
-                  </div>
-                </div>
-              </div>
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                href="#bootstrap"
+                role="tab"
+                data-toggle="tab"
+                >Bootstrap Outfitters</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#git" role="tab" data-toggle="tab"
+                >Git Out Expeditions</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#mongo" role="tab" data-toggle="tab"
+                >Mongo Fly Shop</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#node" role="tab" data-toggle="tab"
+                >Node Outdoor Apparel</a
+              >
+            </li>
+          </ul>
+          <div class="tab-content">
+            <div
+              role="tabpanel"
+              class="tab-pane fade show active"
+              id="bootstrap"
+            >
+              <h4>
+                Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
+              </h4>
+              <p class="d-none d-sm-block">
+                Bootstrap Outfitters supplies you with the gear you need at
+                prices you can't beat.
+              </p>
             </div>
-            <div class="card">
-              <div role="tab" class="card-header">
-                <h4>
-                  <a
-                    class="collapsed"
-                    data-toggle="collapse"
-                    data-target="#git"
-                  >
-                    Git Out Expeditions
-                    <small>Group Adventure Expeditions</small>
-                  </a>
-                </h4>
-                <div class="collapse" id="git" data-parent="#accordion">
-                  <div class="card-body">
-                    <p class="d-none d-sm-block">
-                      Join Git Out Expeditions to explore new horizons with a
-                      group of other adventurers!
-                    </p>
-                  </div>
-                </div>
-              </div>
+            <div role="tabpanel" class="tab-pane fade" id="git">
+              <h4>
+                Git Out Expeditions <small>Group Adventure Expeditions</small>
+              </h4>
+              <p class="d-none d-sm-block">
+                Join Git Out Expeditions to explore new horizons with a group of
+                other adventurers!
+              </p>
             </div>
-            <div class="card">
-              <div role="tab" class="card-header">
-                <h4>
-                  <a
-                    class="collapsed"
-                    data-toggle="collapse"
-                    data-target="#mongo"
-                  >
-                    Mongo Fly Shop
-                    <small>Your Neighborhood Fly Fishing Shop</small>
-                  </a>
-                </h4>
-                <div class="collapse" id="mongo" data-parent="#accordion">
-                  <div class="card-body">
-                    <p class="d-none d-sm-block">
-                      Need a new fishing pole, a tacklebox, or flies of all
-                      kinds? Stop by Mongo Fly Shop.
-                    </p>
-                  </div>
-                </div>
-              </div>
+            <div role="tabpanel" class="tab-pane fade" id="mongo">
+              <h4>
+                Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
+              </h4>
+              <p class="d-none d-sm-block">
+                Need a new fishing pole, a tacklebox, or flies of all kinds?
+                Stop by Mongo Fly Shop.
+              </p>
             </div>
-            <div class="card">
-              <div role="tab" class="card-header">
-                <h4>
-                  <a
-                    class="collapsed"
-                    data-toggle="collapse"
-                    data-target="#node"
-                  >
-                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
-                  </a>
-                </h4>
-                <div class="collapse" id="node" data-parent="#accordion">
-                  <div class="card-body">
-                    <p class="d-none d-sm-block">
-                      From polar fleeces to swimsuits, hiking boots to waders, a
-                      visit to Node will be sure to get you covered.
-                    </p>
-                  </div>
-                </div>
-              </div>
+            <div role="tabpanel" class="tab-pane fade" id="node">
+              <h4>
+                Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
+              </h4>
+              <p class="d-none d-sm-block">
+                From polar fleeces to swimsuits, hiking boots to waders, a visit
+                to Node will be sure to get you covered.
+              </p>
             </div>
           </div>
         </div>
