--- a/contactus.html
+++ b/contactus.html
@@ -120,11 +120,11 @@
         </div>
       </div>
 
-      <div class="row row-content px-auto">
+      <div class="row row-content">
         <div class="col-12 mb-2">
           <h2>Send us your Feedback</h2>
         </div>
-        <div class="col-md-10 bg-light text-dark">
+        <div class="col-12 bg-light text-dark">
           <form>
             <div class="form-group row">
               <label for="firstName" class="col-md-2 col-form-label"
