--- a/aboutus.html
+++ b/aboutus.html
@@ -148,7 +148,7 @@
       <div class="row row-content">
         <div class="col-12">
           <h3>Community Partners</h3>
-          <div id="accordion">
+          <div id="accordion" role="tablist">
             <div class="card">
               <div role="tab" class="card-header">
                 <h4>
