Replace data- attributes with ids

--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col col-md-4 col-xl-2 mt-4">
-            <a
-              role="button"
-              class="btn btn-lg btn-info"
-              data-toggle="modal"
-              data-target="#reserveModal"
+            <a role="button" class="btn btn-lg btn-info" id="reserveButton"
               >Reserve Campsite</a
             >
           </div>
@@ -187,7 +183,7 @@
             </li>
           </ul>
           <span class="navbar-text ml-auto">
-            <a role="button" data-toggle="modal" data-target="#loginModal"
+            <a role="button" id="loginButton"
               ><i class="fa fa-sign-in"></i> Login</a
             ></span
           >
