--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
     <!-- endbuild -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
+      href="https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans"
     />
 
     <title>NuCamp: A Better Way To Camp</title>
