--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- endbuild -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
+      href="https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans"
     />
     <title>NuCamp: A Better Way To Camp</title>
   </head>
@@ -49,7 +49,7 @@
     <div id="reserveModal" class="modal fade" role="dialog">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-          <div class="modal-header bg-info text-white">
+          <div class="modal-header">
             <h3 class="modal-title">Reserve a Campsite</h3>
             <button type="button" class="close" data-dismiss="modal">
               &times;
